--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   
   <table>
     <tr>
-      <
+      <th>City</th>
+      <th>State</th>
+      <th>2017 estimate</th>
     </tr>
   </table>
   
