--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
       <th>State</th>
       <th>2017 estimate</th>
     </tr>
+    <tr>
+      <td>New York</td>
+      <td>New York</td>
+      <td></td>
+    </tr>
   </table>
   
 </body>
